# conan-pkgs-with-shared-cmake-namespace-recreate

./: .gitignore  README.md
a/: CMakeLists.txt  conanfile.py
a/include/acme/: a.hpp
a/src/: a.cpp
a/test_package/: CMakeLists.txt  a_test.cpp  conanfile.py
b/: CMakeLists.txt  conanfile.py
b/include/acme/: b.hpp
b/src/: b.cpp
b/test_package/: CMakeLists.txt  b_test.cpp  conanfile.py
c/: CMakeLists.txt  conanfile.py
c/include/acme/: c.hpp
c/src/: c.cpp
c/test_package/: c_test.cpp  conanfile.py
c/test_package_find_package_multi/: CMakeLists.txt  conanfile.py
